--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,36 @@ jobs:
 
       - name: Done
         run: echo "Command Successfull"
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image
+        run: |
+            docker build -t devops:latest .
+
+      - name: Log in docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: $ {{secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: push docker image
+        run: |
+          docker tag devops:latest rohan7300/devops:latest
+          docker push rohan7300/devops:latest
+
+      - name: DEPLOY ON SERVER 
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            docker pull rohan7300/devops:latest
+            docker stop my-container || true
+            docker rm my-container || true
+            docker run -d --name devops -p 10:80 devops 
+      
+        
        
