--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3  
 
-      - name: Set up node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+     ## - name: Set up node.js
+      ##  uses: actions/setup-node@v3
+      ##  with:
+      ##    node-version: '20'
 
-      - name: Install dependencies
-        run: |
-          npm install
+     ## - name: Install dependencies
+     ##   run: |
+      ##    npm install
 
       - name: Done
         run: echo "Command Successfull"
